refactor: reduce number of endpoints
